--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # ignore everything in the root except the "wp-content" directory.
 /*
+/index.php
 !wp-content/
  
 # ignore all files starting with .
@@ -82,3 +83,4 @@ wp-content/themes/lilim-v2/
 
 # ignore node/grunt dependency directories
 node_modules/
+index.php
