update gulp and package

--- a/wp-content/themes/Lilim-Theme-Wordpress/package.json
+++ b/wp-content/themes/Lilim-Theme-Wordpress/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "gulp": "~3.8.10",
     "gulp-bless": "~1.0",
+    "gulp-autoprefixer": "^2.0.0",
     "gulp-cache": "^0.2.0",
     "gulp-concat": "^2.3.3",
     "gulp-jshint": "^1.7.1",
