--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "devDependencies": {
-    "gulp": "~3.8.10",
+    "gulp": ">=3.9.0",
     "gulp-bless": "~1.0",
     "gulp-autoprefixer": "^2.0.0",
     "gulp-cache": "^0.2.0",
@@ -11,9 +11,11 @@
     "gulp-minify-css": "^0.3.6",
     "gulp-notify": "^1.4.0",
     "gulp-rimraf": "^0.1.0",
+    "gulp-util": ">=2.2.14",
     "gulp-uglify": "^0.3.1",
     "gulp-plumber": "^0.6.6",
     "gulp-sourcemaps": "~1.2.4",
+    "merge-stream": ">=0.1.7",
     "bower": "~1.3.5",
     "grunt": "~0.4.5"
   }
