--- a/package.json
+++ b/package.json
@@ -1,26 +1,29 @@
 {
   "devDependencies": {
+    "bower": "~1.3.5",
+    "grunt": "~0.4.5",
     "gulp": ">=3.9.0",
+    "gulp-autoprefixer": "^2.3.1",
     "gulp-bless": "~1.0",
-    "gulp-autoprefixer": "^2.0.0",
     "gulp-cache": "^0.2.0",
     "gulp-concat": "^2.3.3",
     "gulp-jshint": "^1.7.1",
-    "gulp-less": "^1.3.2",
+    "gulp-less": "^1.3.9",
     "gulp-livereload": "^2.1.0",
     "gulp-minify-css": "^0.3.6",
     "gulp-notify": "^1.4.0",
-    "gulp-rimraf": "^0.1.0",
-    "gulp-util": ">=2.2.14",
-    "gulp-uglify": "^0.3.1",
     "gulp-plumber": "^0.6.6",
+    "gulp-rename": "^1.2.2",
+    "gulp-rimraf": "^0.1.0",
     "gulp-sourcemaps": "~1.2.4",
-    "merge-stream": ">=0.1.7",
-    "bower": "~1.3.5",
-    "grunt": "~0.4.5"
+    "gulp-svgmin": "^1.2.2",
+    "gulp-svgstore": "^6.0.0",
+    "gulp-uglify": "^0.3.1",
+    "gulp-util": ">=2.2.14",
+    "merge-stream": ">=0.1.7"
   },
   "name": "akibarika",
-  "description": "Lilim Theme ========",
+  "description": "Lilim Theme",
   "version": "1.0.0",
   "main": "gulpfile.js",
   "dependencies": {
